--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "build": "vitepress build --outDir ./dist"
   },
   "devDependencies": {
     "vitepress": "^1.1.4"
